--- a/index.html
+++ b/index.html
@@ -4,69 +4,64 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tyler Pohlmann | Data Portfolio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <style>
         body {
-            font-family: 'Roboto', sans-serif;
+            font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
             color: #333;
         }
         header {
-            background-color: #333;
-            color: #fff;
-            padding: 20px 0;
+            background: linear-gradient(to right, #4b6cb7, #182848);
+            color: white;
             text-align: center;
+            padding: 50px 0;
         }
         header h1 {
-            margin: 0;
-            font-size: 2.5em;
+            font-size: 3rem;
+            font-weight: 600;
         }
         header p {
-            margin: 5px 0 0;
-            font-size: 1.2em;
+            font-size: 1.2rem;
+            font-weight: 300;
         }
         nav {
-            text-align: center;
-            margin: 20px 0;
+            background-color: #333;
         }
-        nav a {
-            margin: 0 15px;
-            text-decoration: none;
-            color: #333;
+        nav .nav-link {
+            color: white !important;
             font-weight: bold;
         }
-        nav a:hover {
-            color: #0078d7;
+        nav .nav-link:hover {
+            color: #0078d7 !important;
         }
         .section {
             max-width: 900px;
             margin: 40px auto;
             padding: 20px;
-            background: #fff;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            background: white;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
             border-radius: 8px;
         }
         .section h2 {
-            margin-top: 0;
-            font-size: 2em;
             color: #0078d7;
         }
         .project {
             margin: 20px 0;
         }
-        .project h3 {
-            margin-bottom: 10px;
-        }
-        .project p {
-            margin: 0;
+        .card {
+            margin-bottom: 20px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
         }
         footer {
             text-align: center;
             padding: 20px 0;
             background: #333;
-            color: #fff;
+            color: white;
         }
         footer a {
             color: #0078d7;
@@ -76,13 +71,23 @@
 </head>
 <body>
     <header>
-        <h1>Tyler Pohlmann</h1>
-        <p>Data Engineer | Portfolio</p>
+        <h1 class="animate__animated animate__fadeInDown">Tyler Pohlmann</h1>
+        <p class="animate__animated animate__fadeInUp">Data Engineer | Portfolio</p>
     </header>
-    <nav>
-        <a href="#about">About Me</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">Portfolio</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="#about">About Me</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                </ul>
+            </div>
+        </div>
     </nav>
 
     <section id="about" class="section">
@@ -93,26 +98,40 @@
     <section id="projects" class="section">
         <h2>Projects</h2>
 
-        <div class="project">
-            <h3>Certification Analysis Dashboard</h3>
-            <p>A web scraping project that identifies the most common certifications in job listings for various data-related roles. Built using Python, BeautifulSoup, and Flask, with a dashboard deployed on Streamlit.</p>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Certification Analysis Dashboard</h5>
+                        <p class="card-text">A web scraping project that identifies the most common certifications in job listings for various data-related roles. Built using Python, BeautifulSoup, and Flask, with a dashboard deployed on Streamlit.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Regression Analysis in Economics</h5>
+                        <p class="card-text">An undergraduate capstone project analyzing economic data using regression techniques. The portfolio includes multiple projects, with a key focus on life expectancy determinants and housing price models. Tools used include Python and Excel for statistical analysis and visualization.</p>
+                    </div>
+                </div>
+            </div>
         </div>
 
-        <div class="project">
-            <h3>Regression Analysis in Economics</h3>
-            <p>An undergraduate capstone project analyzing economic data using regression techniques. The portfolio includes multiple projects, with a key focus on life expectancy determinants and housing price models. Tools used include Python and Excel for statistical analysis and visualization.</p>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Python Projects from MBA</h5>
+                        <p class="card-text">Two key projects completed during my MBA program:
+                        <ul>
+                            <li><strong>Project 1:</strong> Financial modeling and scenario analysis using Python, with a focus on investment optimization.</li>
+                            <li><strong>Project 2:</strong> Data visualization dashboard showcasing advanced Seaborn and Matplotlib techniques for business insights.</li>
+                        </ul>
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
-
-        <div class="project">
-            <h3>Python Projects from MBA</h3>
-            <p>Two key projects completed during my MBA program:
-               <ul>
-                  <li><strong>Project 1:</strong> Financial modeling and scenario analysis using Python, with a focus on investment optimization.</li>
-                  <li><strong>Project 2:</strong> Data visualization dashboard showcasing advanced Seaborn and Matplotlib techniques for business insights.</li>
-               </ul>
-            </p>
-        </div>
-
     </section>
 
     <section id="contact" class="section">
@@ -123,7 +142,9 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Tyler Pohlmann. Built with HTML and CSS.</p>
+        <p>&copy; 2024 Tyler Pohlmann. Built with HTML, CSS, and Bootstrap.</p>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
