--- a/index.html
+++ b/index.html
@@ -67,17 +67,26 @@
             color: #0078d7;
             text-decoration: none;
         }
+        .file-download {
+            margin-top: 10px;
+        }
+        .profile-img {
+            max-width: 200px;
+            border-radius: 50%;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
     <header>
         <h1 class="animate__animated animate__fadeInDown">Tyler Pohlmann</h1>
         <p class="animate__animated animate__fadeInUp">Data Engineer | Portfolio</p>
+        <img src="files/profile-picture.jpg" alt="Tyler Pohlmann" class="profile-img animate__animated animate__fadeIn">
     </header>
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <a class="navbar-brand" href="#">Portfolio</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="#navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -112,6 +121,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Regression Analysis in Economics</h5>
                         <p class="card-text">An undergraduate capstone project analyzing economic data using regression techniques. The portfolio includes multiple projects, with a key focus on life expectancy determinants and housing price models. Tools used include Python and Excel for statistical analysis and visualization.</p>
+                        <a href="files/UNLV_Undergraduate_Portfolio.pdf" class="btn btn-primary file-download" download>Download Portfolio</a>
                     </div>
                 </div>
             </div>
@@ -128,6 +138,8 @@
                             <li><strong>Project 2:</strong> Data visualization dashboard showcasing advanced Seaborn and Matplotlib techniques for business insights.</li>
                         </ul>
                         </p>
+                        <a href="files/Python_Project_1.html" class="btn btn-primary file-download" download>View Project 1</a>
+                        <a href="files/Python_Project_2.html" class="btn btn-primary file-download" download>View Project 2</a>
                     </div>
                 </div>
             </div>
@@ -139,6 +151,7 @@
         <p>If you’d like to connect, feel free to reach out via email or LinkedIn:</p>
         <p>Email: <a href="mailto:tpohlmann20@gmail.com">tpohlmann20@gmail.com</a></p>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/tyler-pohlmann-mba-aa56951ab/">linkedin.com/in/tyler-pohlmann-mba-aa56951ab/</a></p>
+        <p>GitHub: <a href="https://github.com/typohlmann">github.com/typohlmann</a></p>
     </section>
 
     <footer>
