--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
             border-radius: 50%;
             margin-top: 20px;
         }
+        iframe {
+            width: 100%;
+            height: 500px;
+            border: none;
+            margin-top: 10px;
+        }
     </style>
 </head>
 <body>
@@ -121,7 +127,8 @@
                     <div class="card-body">
                         <h5 class="card-title">Regression Analysis in Economics</h5>
                         <p class="card-text">An undergraduate capstone project analyzing economic data using regression techniques. The portfolio includes multiple projects, with a key focus on life expectancy determinants and housing price models. Tools used include Python and Excel for statistical analysis and visualization.</p>
-                        <a href="files/UNLV_Undergraduate_Portfolio.pdf" class="btn btn-primary file-download" download>Download Portfolio</a>
+                        <a href="files/UNLV_Undergraduate_Portfolio.pdf" target="_blank" class="btn btn-primary file-download">View Portfolio</a>
+                        <iframe src="files/UNLV_Undergraduate_Portfolio.pdf"></iframe>
                     </div>
                 </div>
             </div>
@@ -138,8 +145,8 @@
                             <li><strong>Project 2:</strong> Data visualization dashboard showcasing advanced Seaborn and Matplotlib techniques for business insights.</li>
                         </ul>
                         </p>
-                        <a href="files/Python_Project_1.html" class="btn btn-primary file-download" download>View Project 1</a>
-                        <a href="files/Python_Project_2.html" class="btn btn-primary file-download" download>View Project 2</a>
+                        <a href="files/Python_Project_1.html" target="_blank" class="btn btn-primary file-download">View Project 1</a>
+                        <a href="files/Python_Project_2.html" target="_blank" class="btn btn-primary file-download">View Project 2</a>
                     </div>
                 </div>
             </div>
