--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
             margin-bottom: 20px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
         }
+        .btn-disabled {
+            background-color: #6c757d;
+            color: white;
+            cursor: not-allowed;
+            opacity: 0.65;
+            pointer-events: none;
+        }
         footer {
             text-align: center;
             padding: 20px 0;
@@ -119,6 +126,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Certification Analysis Dashboard</h5>
                         <p class="card-text">A web scraping project that identifies the most common certifications in job listings for various data-related roles. Built using Python, BeautifulSoup, and Flask, with a dashboard deployed on Streamlit.</p>
+                        <button class="btn btn-disabled">In Progress</button>
                     </div>
                 </div>
             </div>
